--- a/speech_recognition/test.ipynb
+++ b/speech_recognition/test.ipynb
@@ -11,7 +11,7 @@
     "import os\n",
     "openai.api_key = os.getenv(\"OPENAI_API_KEY\")\n",
     "import wave\n",
-    "client = OpenAI(api_key=\"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\")\n",
+    "client = OpenAI(api_key=\"#####\")\n",
     "\n",
     "class Config:\n",
     "    channels = 2\n",
@@ -49,7 +49,7 @@
    ],
    "source": [
     "from openai import OpenAI\n",
-    "client = OpenAI(api_key = \"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\")\n",
+    "client = OpenAI(api_key = \"#####\")\n",
     "path = r\"C:\\Users\\Arpan Kumar\\Downloads\\GPTInterviewer-main (3)\\GPTInterviewer-main\\GPTInterviewer-main\\temp\\audio.wav\"\n",
     "audio_file= open(path, \"rb\")\n",
     "transcription = client.audio.transcriptions.create(\n",
